@@ -74,11 +74,11 @@ public class TFileType {
 
 		Integer value = null;
 		if (this.equals(TFileType.FILE))
-			value = new Integer(0);
+			value = Integer.valueOf(0);
 		if (this.equals(TFileType.DIRECTORY))
-			value = new Integer(1);
+			value = Integer.valueOf(1);
 		if (this.equals(TFileType.LINK))
-			value = new Integer(2);
+			value = Integer.valueOf(2);
 		param.put(name, value);
 	}
 }
